--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  background-image: url("images/subway-route-map.png");
+  background-image: url("images/subway-route-map_alt.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
